deploy/system/identity/base/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: oidc-discovery-route
  namespace: default
spec:
  parentRefs:
    - name: default-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "kube.austinbayley.co.uk"
  rules:
    - matches:
        - path:
            type: Exact
            value: "/.well-known/openid-configuration"
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: kubernetes
    - matches:
        - path:
            type: Exact
            value: "/openid/v1/jwks"
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: kubernetes
